Update notebook outputs and code examples in TAL_Labo1a and TAL_Labo1b_student

--- a/TAL_Labo1b_student.ipynb
+++ b/TAL_Labo1b_student.ipynb
@@ -33,13 +33,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt_tab to /home/neroil/nltk_data...\n",
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import nltk\n",
     "import os\n",
-    "#from nltk.book import *"
+    "#from nltk.book import *\n",
+    "\n",
+    "nltk.download('punkt_tab')"
    ]
   },
   {
@@ -57,12 +78,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "[('and', 'fries'), ('cheeseburgers', 'and'), ('i', 'love'), ('love', 'cheeseburgers')]\n"
+     ]
+    }
+   ],
    "source": [
     "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "sentence1 = [\"i\", \"love\", \"cheeseburgers\", \"and\", \"fries\"]\n",
+    "\n",
+    "print(len(sentence1))\n",
+    "\n",
+    "bigrams = nltk.bigrams(sentence1)\n",
+    "print(sorted(list(bigrams)))\n"
    ]
   },
   {
@@ -76,12 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'love', 'cheeseburgers', 'and', 'fries', '!']\n"
+     ]
+    }
+   ],
    "source": [
     "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "string2 = \"I love cheeseburgers and fries !\"\n",
+    "sentence2 = nltk.word_tokenize(string2)\n",
+    "\n",
+    "print(sentence2)"
    ]
   },
   {
@@ -95,13 +141,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'*** START OF THE PROJECT GUTENBERG EBOOK 2554 ***\\n\\n\\n\\n\\nCRIME AND PUNISHMENT\\n'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from urllib import request\n",
     "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "url = \"http://www.gutenberg.org/files/2554/2554-0.txt\"\n",
+    "response = request.urlopen(url)\n",
+    "raw = response.read().decode('utf8')\n",
+    "type(raw)\n",
+    "len(raw)\n",
+    "raw[:75]"
    ]
   },
   {
@@ -115,12 +177,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4638\n",
+      "1135166\n",
+      "PART I\n",
+      "\n",
+      "\n",
+      "\n",
+      "CHAPTER I\n",
+      "\n",
+      "On an exceptionally hot eveni\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'of a new story, but our present story is\\nended.\\n\\n\\n'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "indexBegin = raw.find('PART I')\n",
+    "print(indexBegin)\n",
+    "indexEnd = raw.find('*** END OF')\n",
+    "print(indexEnd)\n",
+    "\n",
+    "\n",
+    "interestingText = raw[indexBegin:indexEnd]\n",
+    "\n",
+    "#Check si le début est bien dedans !\n",
+    "print(interestingText[:50])\n",
+    "\n",
+    "#Check si la fin est bien dedans !\n",
+    "interestingText[len(interestingText) - 50:] \n",
+    "\n"
    ]
   },
   {
@@ -140,21 +241,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['He was hopelessly in debt to his landlady, and was afraid of meeting her.',\n",
+       " 'This was not because he was cowardly and abject, quite the contrary; but for some time past he had been in an overstrained irritable condition, verging on hypochondria.',\n",
+       " 'He had become so completely absorbed in himself, and isolated from his fellows that he dreaded meeting, not only his landlady, but anyone at all.',\n",
+       " 'He was crushed by poverty, but the anxieties of his position had of late ceased to weigh upon him.']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Enlever les \\n\n",
+    "interestingTextCleaned = interestingText.replace('\\n', ' ')\n",
+    "\n",
+    "sentences = nltk.sent_tokenize(interestingTextCleaned)\n",
+    "\n",
+    "sentences[5:9]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function TextIOWrapper.close()>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "filename1 = \"sample_text_1.txt\"\n",
     "# Pour un fichier local : chemin relatif par rapport au notebook\n",
@@ -163,7 +294,9 @@
     "    os.remove(filename1)\n",
     "fd = open(filename1, 'a', encoding='utf8')\n",
     "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "\n",
+    "fd.write('\\n'.join(sentences) + '\\n')\n",
+    "fd.close"
    ]
   },
   {
@@ -172,7 +305,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Votre appréciation de la qualité ici :"
+    "# Votre appréciation de la qualité ici :\n",
+    "## Ca m'a l'air OK, sauf lorsqu'il y a des parties ou des titres, ils se collent à la phrase suivante !"
    ]
   },
   {
@@ -186,12 +320,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['an', 'exceptionally', 'hot', 'evening']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "words = nltk.word_tokenize(' '.join(sentences))\n",
+    "words[5:9]"
    ]
   },
   {
@@ -200,7 +346,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Votre appréciation de la qualité ici :"
+    "# Votre appréciation de la qualité ici :\n",
+    "## C'est niquel en fait !"
    ]
   },
   {
@@ -215,8 +362,7 @@
     "if os.path.exists(filename2): \n",
     "    os.remove(filename2)\n",
     "fd = open(filename2, 'a', encoding='utf8')\n",
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -236,8 +382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -279,8 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -297,8 +441,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -314,8 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -340,8 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -360,8 +501,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -388,8 +528,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -423,8 +562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -440,8 +578,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -470,8 +607,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -485,9 +621,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cours_tal",
+   "display_name": "CoursTAL",
    "language": "python",
-   "name": "cours_tal"
+   "name": "courstal"
   },
   "language_info": {
    "codemirror_mode": {
@@ -499,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
