--- a/TAL_Labo1b_student.ipynb
+++ b/TAL_Labo1b_student.ipynb
@@ -33,14 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt_tab to /home/neroil/nltk_data...\n",
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     C:\\Users\\massi\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt_tab is already up-to-date!\n"
      ]
     },
@@ -50,7 +51,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +151,7 @@
        "'*** START OF THE PROJECT GUTENBERG EBOOK 2554 ***\\n\\n\\n\\n\\nCRIME AND PUNISHMENT\\n'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +202,7 @@
        "'of a new story, but our present story is\\nended.\\n\\n\\n'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,23 +242,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 87,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['He was hopelessly in debt to his landlady, and was afraid of meeting her.',\n",
-       " 'This was not because he was cowardly and abject, quite the contrary; but for some time past he had been in an overstrained irritable condition, verging on hypochondria.',\n",
-       " 'He had become so completely absorbed in himself, and isolated from his fellows that he dreaded meeting, not only his landlady, but anyone at all.',\n",
-       " 'He was crushed by poverty, but the anxieties of his position had of late ceased to weigh upon him.']"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de phrases tokenisées : 11903\n",
+      "Extrait de 4 phrases tokenisées :\n",
+      "Phrase 2 : He had successfully avoided meeting his landlady on the staircase.\n",
+      "Phrase 3 : His garret was under the roof of a high, five-storied house and was more like a cupboard than a room.\n",
+      "Phrase 4 : The landlady who provided him with garret, dinners, and attendance, lived on the floor below, and every time he went out he was obliged to pass her kitchen, the door of which invariably stood open.\n",
+      "Phrase 5 : And each time he passed, the young man had a sick, frightened feeling, which made him scowl and feel ashamed.\n"
+     ]
     }
    ],
    "source": [
@@ -267,41 +267,33 @@
     "\n",
     "sentences = nltk.sent_tokenize(interestingTextCleaned)\n",
     "\n",
-    "sentences[5:9]"
+    "print(\"Nombre de phrases tokenisées :\", len(sentences))\n",
+    "\n",
+    "print(\"Extrait de 4 phrases tokenisées :\")\n",
+    "for i, tokens in enumerate(sentences[1:5], start=2):\n",
+    "    print(f\"Phrase {i} :\", tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function TextIOWrapper.close()>"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "filename1 = \"sample_text_1.txt\"\n",
     "# Pour un fichier local : chemin relatif par rapport au notebook\n",
     "# Pour Google Colab, p.ex.: /content/gdrive/My Drive/sample_text_1.txt\n",
     "if os.path.exists(filename1): \n",
     "    os.remove(filename1)\n",
-    "fd = open(filename1, 'a', encoding='utf8')\n",
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
     "\n",
-    "fd.write('\\n'.join(sentences) + '\\n')\n",
-    "fd.close"
+    "\n",
+    "with open(filename1, \"a\", encoding=\"utf8\") as fd:\n",
+    "    fd.write(\"\\n\".join(sentences) + \"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,24 +312,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['an', 'exceptionally', 'hot', 'evening']"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre total de tokens (segmentation phrase par phrase) : 252755\n",
+      "Extrait de 4 phrases tokenisées :\n",
+      "Phrase 2 : ['He', 'had', 'successfully', 'avoided', 'meeting', 'his', 'landlady', 'on', 'the', 'staircase', '.']\n",
+      "Phrase 3 : ['His', 'garret', 'was', 'under', 'the', 'roof', 'of', 'a', 'high', ',', 'five-storied', 'house', 'and', 'was', 'more', 'like', 'a', 'cupboard', 'than', 'a', 'room', '.']\n",
+      "Phrase 4 : ['The', 'landlady', 'who', 'provided', 'him', 'with', 'garret', ',', 'dinners', ',', 'and', 'attendance', ',', 'lived', 'on', 'the', 'floor', 'below', ',', 'and', 'every', 'time', 'he', 'went', 'out', 'he', 'was', 'obliged', 'to', 'pass', 'her', 'kitchen', ',', 'the', 'door', 'of', 'which', 'invariably', 'stood', 'open', '.']\n",
+      "Phrase 5 : ['And', 'each', 'time', 'he', 'passed', ',', 'the', 'young', 'man', 'had', 'a', 'sick', ',', 'frightened', 'feeling', ',', 'which', 'made', 'him', 'scowl', 'and', 'feel', 'ashamed', '.']\n",
+      "[['PART', 'I', 'CHAPTER', 'I', 'On', 'an', 'exceptionally', 'hot', 'evening', 'early', 'in', 'July', 'a', 'young', 'man', 'came', 'out', 'of', 'the', 'garret', 'in', 'which', 'he', 'lodged', 'in', 'S.', 'Place', 'and', 'walked', 'slowly', ',', 'as', 'though', 'in', 'hesitation', ',', 'towards', 'K.', 'bridge', '.'], ['He', 'had', 'successfully', 'avoided', 'meeting', 'his', 'landlady', 'on', 'the', 'staircase', '.']]\n"
+     ]
     }
    ],
    "source": [
     "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    "words = nltk.word_tokenize(' '.join(sentences))\n",
-    "words[5:9]"
+    "tokenized_sentences = [nltk.word_tokenize(sentence) for sentence in sentences]\n",
+    "total_tokens = sum(len(tokens) for tokens in tokenized_sentences)\n",
+    "print(\"Nombre total de tokens (segmentation phrase par phrase) :\", total_tokens)\n",
+    "\n",
+    "# Affichage d'un extrait de 4 phrases tokenisées (par exemple, phrases 6 à 9)\n",
+    "print(\"Extrait de 4 phrases tokenisées :\")\n",
+    "for i, tokens in enumerate(tokenized_sentences[1:5], start=2):\n",
+    "    print(f\"Phrase {i} :\", tokens)\n",
+    "\n",
+    "print(tokenized_sentences[0:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename2 = \"sample_text_2.txt\"\n",
+    "if os.path.exists(filename2):\n",
+    "    os.remove(filename2)\n",
+    "with open(filename2, \"w\", encoding=\"utf8\") as fd:\n",
+    "    for tokens in tokenized_sentences:\n",
+    "        fd.write(\" \".join(tokens) + \"\\n\")"
    ]
   },
   {
@@ -347,22 +364,8 @@
    "outputs": [],
    "source": [
     "# Votre appréciation de la qualité ici :\n",
-    "## C'est niquel en fait !"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filename2 = \"sample_text_2.txt\"\n",
-    "# Pour un fichier local : chemin relatif par rapport au notebook\n",
-    "# Pour Google Colab, p.ex.: /content/gdrive/My Drive/sample_text_2.txt\n",
-    "if os.path.exists(filename2): \n",
-    "    os.remove(filename2)\n",
-    "fd = open(filename2, 'a', encoding='utf8')\n",
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
+    "## C'est très bien, or les ponctuations ont été séparées des mots. C'est un peu bizarre, mais ça reste \"correct\".\n",
+    "## Toutefois, on peut remarquer que les abréviations n'ont pas été séparées de leur point, ce qui est bien."
    ]
   },
   {
@@ -378,20 +381,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extrait de 50 tokens (tokenisation directe) : ['PART', 'I', 'CHAPTER', 'I', 'On', 'an', 'exceptionally', 'hot', 'evening', 'early', 'in', 'July', 'a', 'young', 'man', 'came', 'out', 'of', 'the', 'garret', 'in', 'which', 'he', 'lodged', 'in', 'S.', 'Place', 'and', 'walked', 'slowly', ',', 'as', 'though', 'in', 'hesitation', ',', 'towards', 'K.', 'bridge', '.', 'He', 'had', 'successfully', 'avoided', 'meeting', 'his', 'landlady', 'on', 'the', 'staircase']\n",
+      "Nombre total de tokens (tokenisation directe) : 252755\n",
+      "Nombre total de tokens (segmentation phrase par phrase) : 252755\n"
+     ]
+    }
+   ],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
+    "# 3a. Créer un objet nltk.Text à partir de la liste des tokens\n",
+    "all_tokens = nltk.word_tokenize(interestingTextCleaned)\n",
+    "print(\"Extrait de 50 tokens (tokenisation directe) :\", all_tokens[:50])\n",
+    "print(\"Nombre total de tokens (tokenisation directe) :\", len(all_tokens))\n",
+    "print(\"Nombre total de tokens (segmentation phrase par phrase) :\", total_tokens)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Votre réponse à la question ici :"
+    "# Votre réponse à la question ici :\n",
+    "# Le nombre de tokens reste le même, mais on pert l'information des phrases. \n",
+    "# C'est à dire, on ne sait plus où commence et où finit une phrase. On pourrait les retrouver avec la ponctuation.\n",
+    "# Mais ça reste très bien!"
    ]
   },
   {
@@ -420,11 +441,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
+    "text = nltk.Text(all_tokens)"
    ]
   },
   {
@@ -437,11 +459,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Displaying 2 of 2 matches:\n",
+      "beziatnikov , who felt a return of affection for Pyotr Petrovitch . “ And , wha\n",
+      "sure that it was only your special affection for my poor husband that has made \n"
+     ]
+    }
+   ],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
+    "text.concordance(\"affection\")"
    ]
   },
   {
@@ -453,20 +486,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "place as it character them you me yourself thirst bread course pity\n",
+      "life love suffering uniform wantonness fever months enthusiasm\n"
+     ]
+    }
+   ],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
+    "text.similar(\"affection\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Votre réponse à la question ici :"
+    "# Votre réponse à la question ici :\n",
+    "# Pas incroyable ?"
    ]
   },
   {
@@ -478,11 +522,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Katerina', 'Ivanovna'),\n",
+       " ('Pyotr', 'Petrovitch'),\n",
+       " ('Pulcheria', 'Alexandrovna'),\n",
+       " ('Avdotya', 'Romanovna'),\n",
+       " ('Rodion', 'Romanovitch'),\n",
+       " ('Marfa', 'Petrovna'),\n",
+       " ('Sofya', 'Semyonovna'),\n",
+       " ('old', 'woman'),\n",
+       " ('Porfiry', 'Petrovitch'),\n",
+       " ('Amalia', 'Ivanovna')]"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
+    "# nltk.download('stopwords')\n",
+    "text.collocation_list(10)"
    ]
   },
   {
@@ -497,11 +563,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre de tokens uniques : 11011\n",
+      "Nombre de tokens uniques (hors stopwords) : 10864\n",
+      "20 premiers tokens uniques (hors stopwords) : ['grey-and-rainbow-coloured', 'frightened-looking', 'Schleswig-Holstein', 'disproportionately', 'well-proportioned', 'indistinguishable', 'cross-examination', 'Cough-cough-cough', '_psychologically_', 'enthusiastically', 'terrible-looking', '_Hof-kriegsrath_', 'pawnbroker-woman', 'misunderstanding', 'poverty-stricken', 'superciliousness', 'self-confidently', 'delicate-looking', 'governor-general', 'disproportionate']\n",
+      "Nombre de mots composés : 13\n"
+     ]
+    }
+   ],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
+    "token_set = set(all_tokens)\n",
+    "print(\"Nombre de tokens uniques :\", len(token_set))\n",
+    "token_not_in_stopwords = token_set - set(nltk.corpus.stopwords.words('english'))\n",
+    "print(\"Nombre de tokens uniques (hors stopwords) :\", len(token_not_in_stopwords))\n",
+    "vocab_sorted_by_length = sorted(token_not_in_stopwords, key=lambda w: len(w), reverse=True)\n",
+    "top_20_tokens = vocab_sorted_by_length[:20]\n",
+    "print(\"20 premiers tokens uniques (hors stopwords) :\", top_20_tokens)\n",
+    "print(\"Nombre de mots composés :\", len([w for w in top_20_tokens if \"-\" in w]))"
    ]
   },
   {
@@ -510,7 +595,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Votre réponse à la question ici :"
+    "# Votre réponse à la question ici :\n",
+    "# La plupart des mots ce sont des noms composés"
    ]
   },
   {
@@ -524,11 +610,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70 tokens les plus fréquents : [(',', 16004), ('.', 8754), ('the', 7243), ('and', 6182), ('to', 5174), ('I', 4392), ('a', 4391), ('’', 4034), ('“', 3971), ('”', 3922), ('of', 3704), ('he', 3510), ('you', 3420), ('that', 3038), ('in', 3020), ('it', 2889), ('was', 2780), ('!', 2363), ('?', 2277), ('his', 1977), ('at', 1928), ('her', 1768), ('s', 1745), ('not', 1736), ('with', 1671), ('for', 1573), ('had', 1569), ('him', 1560), ('on', 1417), ('is', 1364), ('she', 1249), ('He', 1231), ('all', 1208), ('as', 1133), ('t', 1132), ('but', 1110), ('be', 1108), ('have', 1103), ('...', 1083), (';', 1046), ('me', 1040), ('are', 815), ('so', 792), ('Raskolnikov', 782), ('what', 751), ('And', 747), ('my', 742), ('were', 700), ('from', 696), ('But', 683), ('....', 683), ('out', 671), ('--', 663), ('up', 640), ('your', 628), ('they', 597), ('there', 597), ('You', 590), ('them', 583), ('this', 579), ('been', 576), ('one', 574), ('would', 552), ('The', 535), ('am', 532), ('an', 529), ('will', 525), ('about', 522), ('by', 521), ('know', 521)]\n",
+      "Mots de plus de 4 caractères parmi les 70 tokens les plus fréquents : ['Raskolnikov', 'there', 'would', 'about']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
+    "freq_dist = nltk.FreqDist(all_tokens)\n",
+    "most_common_70 = freq_dist.most_common(70)\n",
+    "print(\"70 tokens les plus fréquents :\", most_common_70)\n",
+    "\n",
+    "words_top_70_4_chars = [word for word, count in most_common_70 if len(word) > 4]\n",
+    "print(\"Mots de plus de 4 caractères parmi les 70 tokens les plus fréquents :\", words_top_70_4_chars)\n"
    ]
   },
   {
@@ -541,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
