--- a/TAL_Labo1c_student.ipynb
+++ b/TAL_Labo1c_student.ipynb
@@ -44,8 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url2 = \"https://en.wikipedia.org/wiki/Switzerland\" \n",
-    ""
+    "url2 = \"https://en.wikipedia.org/wiki/Switzerland\" \n"
    ]
   },
   {
@@ -86,8 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -108,9 +106,10 @@
     "# Pour Google Colab, p.ex.: /content/gdrive/My Drive/sample_web_page.txt\n",
     "if os.path.exists(filename): \n",
     "    os.remove(filename)\n",
-    "fd = open(filename, 'a', encoding='utf8')\n",
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "\n",
+    "with open(filename, \"a\", encoding=\"utf8\") as fd:\n",
+    "    # write here\n",
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule."
    ]
   },
   {
@@ -135,8 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -181,8 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -198,8 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
@@ -215,8 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    ""
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
    ]
   },
   {
