--- a/TAL_Labo1b_student.ipynb
+++ b/TAL_Labo1b_student.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
        "'*** START OF THE PROJECT GUTENBERG EBOOK 2554 ***\\n\\n\\n\\n\\nCRIME AND PUNISHMENT\\n'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "'of a new story, but our present story is\\nended.\\n\\n\\n'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -255,7 +255,7 @@
        " 'He was crushed by poverty, but the anxieties of his position had of late ceased to weigh upon him.']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "<function TextIOWrapper.close()>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
        "['an', 'exceptionally', 'hot', 'evening']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,9 +352,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre total de tokens: 252755\n",
+      "['PART', 'I', 'CHAPTER', 'I', 'On', 'an', 'exceptionally', 'hot', 'evening', 'early', 'in', 'July', 'a', 'young', 'man', 'came', 'out', 'of', 'the', 'garret', 'in', 'which', 'he', 'lodged', 'in', 'S.', 'Place', 'and', 'walked', 'slowly', ',', 'as', 'though', 'in', 'hesitation', ',', 'towards', 'K.', 'bridge', '.']\n",
+      "['He', 'had', 'successfully', 'avoided', 'meeting', 'his', 'landlady', 'on', 'the', 'staircase', '.']\n",
+      "['His', 'garret', 'was', 'under', 'the', 'roof', 'of', 'a', 'high', ',', 'five-storied', 'house', 'and', 'was', 'more', 'like', 'a', 'cupboard', 'than', 'a', 'room', '.']\n",
+      "['The', 'landlady', 'who', 'provided', 'him', 'with', 'garret', ',', 'dinners', ',', 'and', 'attendance', ',', 'lived', 'on', 'the', 'floor', 'below', ',', 'and', 'every', 'time', 'he', 'went', 'out', 'he', 'was', 'obliged', 'to', 'pass', 'her', 'kitchen', ',', 'the', 'door', 'of', 'which', 'invariably', 'stood', 'open', '.']\n"
+     ]
+    }
+   ],
    "source": [
     "filename2 = \"sample_text_2.txt\"\n",
     "# Pour un fichier local : chemin relatif par rapport au notebook\n",
@@ -362,7 +374,22 @@
     "if os.path.exists(filename2): \n",
     "    os.remove(filename2)\n",
     "fd = open(filename2, 'a', encoding='utf8')\n",
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n"
+    "# Segmenter chaque phrase en tokens\n",
+    "tokenized_sentences = [nltk.word_tokenize(sentence) for sentence in sentences]\n",
+    "\n",
+    "# Afficher le nombre total de tokens\n",
+    "total_tokens = sum(len(sentence) for sentence in tokenized_sentences)\n",
+    "print(\"Nombre total de tokens:\", total_tokens)\n",
+    "\n",
+    "# Afficher 4 phrases tokenisées\n",
+    "for sentence in tokenized_sentences[:4]:\n",
+    "    print(sentence)\n",
+    "\n",
+    "# Écrire les phrases tokenisées dans un nouveau fichier\n",
+    "for sentence in tokenized_sentences:\n",
+    "    fd.write(' '.join(sentence) + '\\n')\n",
+    "fd.close()\n",
+    "\n"
    ]
   },
   {
@@ -378,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +591,7 @@
        " ('Amalia', 'Ivanovna')]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -603,28 +630,28 @@
      "data": {
       "text/plain": [
        "['grey-and-rainbow-coloured',\n",
+       " 'disproportionately',\n",
        " 'Schleswig-Holstein',\n",
        " 'frightened-looking',\n",
-       " 'disproportionately',\n",
-       " 'well-proportioned',\n",
        " 'Cough-cough-cough',\n",
-       " 'cross-examination',\n",
-       " '_psychologically_',\n",
+       " 'well-proportioned',\n",
        " 'indistinguishable',\n",
+       " '_psychologically_',\n",
+       " 'cross-examination',\n",
+       " 'straight-forward',\n",
+       " 'circumstantially',\n",
        " 'poverty-stricken',\n",
-       " 'waistcoat-pocket',\n",
-       " 'pawnbroker-woman',\n",
        " 'half-broken-down',\n",
-       " 'Governor-General',\n",
+       " 'governor-general',\n",
+       " 'waistcoat-pocket',\n",
+       " 'sinister-looking',\n",
+       " 'pawnbroker-woman',\n",
        " '_Hof-kriegsrath_',\n",
-       " 'conscience-prick',\n",
-       " 'disproportionate',\n",
-       " 'evil-intentioned',\n",
-       " 'horrible-looking',\n",
-       " 'superciliousness']"
+       " 'indiscriminately',\n",
+       " 'self-confidently']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +759,7 @@
        "<Axes: xlabel='Samples', ylabel='Cumulative Counts'>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -762,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +798,7 @@
        "Text(0, 0.5, 'Frequency')"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -798,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
