--- a/TAL_Labo1c_student.ipynb
+++ b/TAL_Labo1c_student.ipynb
@@ -132,6 +132,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Oui, il y a des imperfections à cause des annotations de la page web.\n",
+    "# Cependant, les résultats sont assez bons pour une première analyse."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
@@ -197,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +215,7 @@
      "output_type": "stream",
      "text": [
       "Nombre de types: 4144\n",
-      "['Donau-Iller-Rhine-Limes', '65,000-kilometre-long', 'policies—contributes', 'machines/electronics', 'Switzerland–European', 'non-German-speaking', '57.1-kilometre-long', 'instruments/watches', 'autobahn/autoroute', 'commander-in-chief']\n"
+      "['Donau-Iller-Rhine-Limes', '65,000-kilometre-long', 'policies—contributes', 'machines/electronics', 'Switzerland–European', 'non-German-speaking', '57.1-kilometre-long', 'instruments/watches', 'autobahn/autoroute', 'commander-in-chief', 'multi-disciplinary', 'near-Mediterranean', 'Non-Proliferation', 'Weiterentwicklung', 'Gallen-Altenrhein', 'pre-revolutionary', 'Telecommunication', 'energy-producing', 'Romansh-speaking', 'SwitzerlandSwiss']\n"
      ]
     }
    ],
@@ -215,7 +225,7 @@
     "types = set(text_nltk)\n",
     "print(f\"Nombre de types: {len(types)}\")\n",
     "longest_words = sorted(types, key=len, reverse=True)\n",
-    "print(longest_words[:10])\n",
+    "print(longest_words[:20])\n",
     " "
    ]
   },
@@ -226,7 +236,7 @@
    "outputs": [],
    "source": [
     "# Votre réponse à la question ici :\n",
-    "# Comme avant, ce sont des mots composés, des distances et des mots avec \"/\" qui representent des termes alternatifs."
+    "# Comme avant, ce sont des mots composés, des mots en allemand et francais, des distances et des mots avec \"/\" qui representent des termes alternatifs."
    ]
   },
   {
