--- a/TAL_Labo1b_student.ipynb
+++ b/TAL_Labo1b_student.ipynb
@@ -359,12 +359,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Votre appréciation de la qualité ici :\n",
-    "## C'est très bien, or les ponctuations ont été séparées des mots. C'est un peu bizarre, mais ça reste \"correct\".\n",
+    "## C'est très bien, or les ponctuations ont été séparées des mots. \n",
+    "## Avoir un espace avant une ponctuation est un peu bizarre, mais ça reste \"correct\".\n",
     "## Toutefois, on peut remarquer que les abréviations n'ont pas été séparées de leur point, ce qui est bien."
    ]
   },
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +401,12 @@
     "all_tokens = nltk.word_tokenize(interestingTextCleaned)\n",
     "print(\"Extrait de 50 tokens (tokenisation directe) :\", all_tokens[:50])\n",
     "print(\"Nombre total de tokens (tokenisation directe) :\", len(all_tokens))\n",
-    "print(\"Nombre total de tokens (segmentation phrase par phrase) :\", total_tokens)"
+    "print(\"Nombre total de tokens (segmentation phrase par phrase) :\", total_tokens)\n",
+    "\n",
+    "if len(all_tokens) == total_tokens:\n",
+    "    print(\"Same size !\")\n",
+    "else:\n",
+    "    print(\"Warning, there's a difference of %d\" % (len(all_tokens) - len(total_tokens)))"
    ]
   },
   {
@@ -504,12 +510,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Votre réponse à la question ici :\n",
-    "# Pas incroyable ?"
+    "# Pas incroyable, le contexte n'a pas l'air d'être super semblable"
    ]
   },
   {
@@ -606,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -622,8 +628,7 @@
     "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
     "freq_dist = nltk.FreqDist(all_tokens)\n",
     "most_common_70 = freq_dist.most_common(70)\n",
-    "print(\"70 tokens les plus fréquents :\", most_common_70)\n",
-    "words_top_70_4_chars = [word for word, count in most_common_70 if len(word) > 4]\n",
+    "words_top_70_4_chars = [(word, count) for word, count in most_common_70 if len(word) > 4]\n",
     "print(\"Mots de plus de 4 caractères parmi les 70 tokens les plus fréquents :\", words_top_70_4_chars)"
    ]
   },
@@ -725,13 +730,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Vos réponses aux deux questions ici :\n",
     "# C'est logiquement une courbe décroissante, car il y a plus de tokens courts que de tokens longs.\n",
-    "# La longueur la plus fréquente des tokens est 1. Le nombre de tokens de longueur 1 est 55363."
+    "# La longueur la plus commune est 1 surement a cause de la ponctuation. Le nombre de tokens de longueur 1 est 55363."
    ]
   },
   {
@@ -747,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +772,7 @@
     "x = list(range(0, len(sorted_freq)))\n",
     "\n",
     "plt.figure(figsize=(12, 8))\n",
-    "plt.plot(x, sorted_freq, marker='o', label=\"Fréquence observée\")\n",
+    "plt.plot(x, sorted_freq, label=\"Fréquence observée\")\n",
     "\n",
     "a = 44000\n",
     "b = 2.75\n",
