--- a/TAL_Labo1c_student.ipynb
+++ b/TAL_Labo1c_student.ipynb
@@ -40,11 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url2 = \"https://en.wikipedia.org/wiki/Switzerland\" "
+    "url2 = \"https://en.wikipedia.org/wiki/Switzerland\"\n",
+    "response = request.urlopen(url2)\n",
+    "raw = response.read().decode('utf8')\n",
+    "\n",
+    "print(f\"La longueur est de {len(raw)}\")\n"
    ]
   },
   {
@@ -56,14 +60,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "response = request.urlopen(url2)\n",
-    "html2 = response.read().decode('utf8')\n",
-    "raw2 = BeautifulSoup(html2).get_text()"
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -90,12 +91,17 @@
    ],
    "source": [
     "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
-    "index_of_start = raw2.find(\"Switzerland,[d] officially the Swiss Confederation\")\n",
+    "response = request.urlopen(url2)\n",
+    "html2 = response.read().decode('utf8')\n",
+    "raw2 = BeautifulSoup(html2, 'html.parser').get_text()\n",
+    "\n",
+    "index_of_start = raw2.find(\"Swiss Confederation\\nFive official names\")\n",
     "index_of_end = raw2.find(\"[281][282]\")\n",
     "print(f\"Longueur brute: {len(raw2)}\")\n",
     "raw2 = raw2[index_of_start:index_of_end]\n",
-    "print(raw2[:100])\n",
-    "print(raw2[-100:])"
+    "\n",
+    "print(\"Premiers 100 chars : \\n %s \\n\" %raw2[:100])\n",
+    "print(\"Derniers 100 chars : \\n %s\" %raw2[-100:])"
    ]
   },
   {
@@ -107,42 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nombre de phrases: 639\n",
-      "['Switzerland,[d] officially the Swiss Confederation,[e] is a landlocked country located in west-central Europe.', '[f][13] It is bordered by Italy to the south, France to the west, Germany to the north, and Austria and Liechtenstein to the east.', \"Switzerland is geographically divided among the Swiss Plateau, the Alps and the Jura; the Alps occupy the greater part of the territory, whereas most of the country's nearly 9 million people are concentrated on the plateau, which hosts its largest cities and economic centres, including Zurich, Geneva, and Lausanne.\", '[14]\\nSwitzerland is a federal republic composed of 26 cantons, with federal authorities based in Bern.', '[a][2][1] It has four main linguistic and cultural regions: German, French, Italian and Romansh.', 'Although most Swiss are German-speaking, national identity is fairly cohesive, being rooted in a common historical background, shared values such as federalism and direct democracy,[15] and Alpine symbolism.', '[16][17] Swiss identity transcends language, ethnicity, and religion, leading to Switzerland being described as a Willensnation (\"nation of volition\") rather than a nation state.', \"[18]\\nSwitzerland originates from the Old Swiss Confederacy established in the Late Middle Ages as a defensive and commercial alliance; the Federal Charter of 1291 is considered the country's founding document.\", 'The confederation steadily expanded and consolidated despite external threats and internal political and religious strife.', 'Swiss independence from the Holy Roman Empire was formally recognised in the Peace of Westphalia in 1648.']\n",
-      "[['Switzerland', ',', '[', 'd', ']', 'officially', 'the', 'Swiss', 'Confederation', ',', '[', 'e', ']', 'is', 'a', 'landlocked', 'country', 'located', 'in', 'west-central', 'Europe', '.'], ['[', 'f', ']', '[', '13', ']', 'It', 'is', 'bordered', 'by', 'Italy', 'to', 'the', 'south', ',', 'France', 'to', 'the', 'west', ',', 'Germany', 'to', 'the', 'north', ',', 'and', 'Austria', 'and', 'Liechtenstein', 'to', 'the', 'east', '.'], ['Switzerland', 'is', 'geographically', 'divided', 'among', 'the', 'Swiss', 'Plateau', ',', 'the', 'Alps', 'and', 'the', 'Jura', ';', 'the', 'Alps', 'occupy', 'the', 'greater', 'part', 'of', 'the', 'territory', ',', 'whereas', 'most', 'of', 'the', 'country', \"'s\", 'nearly', '9', 'million', 'people', 'are', 'concentrated', 'on', 'the', 'plateau', ',', 'which', 'hosts', 'its', 'largest', 'cities', 'and', 'economic', 'centres', ',', 'including', 'Zurich', ',', 'Geneva', ',', 'and', 'Lausanne', '.'], ['[', '14', ']', 'Switzerland', 'is', 'a', 'federal', 'republic', 'composed', 'of', '26', 'cantons', ',', 'with', 'federal', 'authorities', 'based', 'in', 'Bern', '.'], ['[', 'a', ']', '[', '2', ']', '[', '1', ']', 'It', 'has', 'four', 'main', 'linguistic', 'and', 'cultural', 'regions', ':', 'German', ',', 'French', ',', 'Italian', 'and', 'Romansh', '.'], ['Although', 'most', 'Swiss', 'are', 'German-speaking', ',', 'national', 'identity', 'is', 'fairly', 'cohesive', ',', 'being', 'rooted', 'in', 'a', 'common', 'historical', 'background', ',', 'shared', 'values', 'such', 'as', 'federalism', 'and', 'direct', 'democracy', ',', '[', '15', ']', 'and', 'Alpine', 'symbolism', '.'], ['[', '16', ']', '[', '17', ']', 'Swiss', 'identity', 'transcends', 'language', ',', 'ethnicity', ',', 'and', 'religion', ',', 'leading', 'to', 'Switzerland', 'being', 'described', 'as', 'a', 'Willensnation', '(', '``', 'nation', 'of', 'volition', \"''\", ')', 'rather', 'than', 'a', 'nation', 'state', '.'], ['[', '18', ']', 'Switzerland', 'originates', 'from', 'the', 'Old', 'Swiss', 'Confederacy', 'established', 'in', 'the', 'Late', 'Middle', 'Ages', 'as', 'a', 'defensive', 'and', 'commercial', 'alliance', ';', 'the', 'Federal', 'Charter', 'of', '1291', 'is', 'considered', 'the', 'country', \"'s\", 'founding', 'document', '.'], ['The', 'confederation', 'steadily', 'expanded', 'and', 'consolidated', 'despite', 'external', 'threats', 'and', 'internal', 'political', 'and', 'religious', 'strife', '.'], ['Swiss', 'independence', 'from', 'the', 'Holy', 'Roman', 'Empire', 'was', 'formally', 'recognised', 'in', 'the', 'Peace', 'of', 'Westphalia', 'in', '1648', '.']]\n",
-      "Nombre de tokens: 639\n"
-     ]
-    }
-   ],
-   "source": [
-    "sentences = nltk.sent_tokenize(raw2)\n",
-    "print(f\"Nombre de phrases: {len(sentences)}\")\n",
-    "print(sentences[:10])\n",
-    "tokens = [nltk.word_tokenize(sent) for sent in sentences]\n",
-    "print(tokens[:10])\n",
-    "print(f\"Nombre de tokens: {len(tokens)}\") "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Oui, il y a des imperfections à cause des annotations de la page web.\n",
-    "# Cependant, les résultats sont assez bons pour une première analyse."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,10 +123,12 @@
     "if os.path.exists(filename): \n",
     "    os.remove(filename)\n",
     "\n",
+    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
+    "sentences = nltk.sent_tokenize(raw2)\n",
     "with open(filename, \"a\", encoding=\"utf8\") as fd:\n",
-    "    for tok in tokens:\n",
-    "        fd.write(\" \".join(tok) + \"\\n\")\n",
-    "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule."
+    "    for sentence in sentences:\n",
+    "        tokens = nltk.word_tokenize(sentence)\n",
+    "        fd.write(\" \".join(tokens) + \"\\n\")"
    ]
   },
   {
@@ -207,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +196,7 @@
     "# Veuillez écrire votre code ci-dessous, puis exécuter cette cellule.\n",
     "text_nltk = nltk.Text(words2)\n",
     "types = set(text_nltk)\n",
-    "print(f\"Nombre de types: {len(types)}\")\n",
+    "print(\"Nombre de mots différents dans le vocabulaire: %d\" %len(types))\n",
     "longest_words = sorted(types, key=len, reverse=True)\n",
     "print(longest_words[:20])\n",
     " "
@@ -236,7 +209,8 @@
    "outputs": [],
    "source": [
     "# Votre réponse à la question ici :\n",
-    "# Comme avant, ce sont des mots composés, des mots en allemand et francais, des distances et des mots avec \"/\" qui representent des termes alternatifs."
+    "# On voit ici que comme dans le labo1b, on obtient des mots composés mais en plus de ça on obtient aussi des artéfacts de la page web comme \"languagesGermanFrenchItalianRomanshReligion\"\n",
+    "# Aussi, des mots en allemand et francais, des distances et des mots avec \"/\" qui representent des termes alternatifs."
    ]
   },
   {
